...
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/dummyislove" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
